{
  "version": 4,
  "terraform_version": "0.15.1",
  "serial": 118,
  "lineage": "cd6110f0-5c4d-2419-1798-cf13a56717bc",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/bac3dafd-694e-4cd6-9d74-16e912e3fc72/resourceGroups/example-resources/providers/Microsoft.Network/networkInterfaces/example-nic",
            "internal_domain_name_suffix": "olcbmmeeoj3u5hhvvawjjm4y1f.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.2.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/bac3dafd-694e-4cd6-9d74-16e912e3fc72/resourceGroups/example-resources/providers/Microsoft.Network/virtualNetworks/example-network/subnets/internal"
              }
            ],
            "location": "westeurope",
            "mac_address": "00-22-48-80-1E-33",
            "name": "example-nic",
            "private_ip_address": "10.0.2.4",
            "private_ip_addresses": [
              "10.0.2.4"
            ],
            "resource_group_name": "example-resources",
            "virtual_machine_id": "/subscriptions/bac3dafd-694e-4cd6-9d74-16e912e3fc72/resourceGroups/example-resources/providers/Microsoft.Compute/virtualMachines/example-machine"
          },
          "dependencies": [
            "azurerm_resource_group.example",
            "azurerm_subnet.example",
            "azurerm_virtual_network.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "example2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/bac3dafd-694e-4cd6-9d74-16e912e3fc72/resourceGroups/example-resources/providers/Microsoft.Network/networkInterfaces/nic2",
            "internal_domain_name_suffix": "olcbmmeeoj3u5hhvvawjjm4y1f.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.2.5",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/bac3dafd-694e-4cd6-9d74-16e912e3fc72/resourceGroups/example-resources/providers/Microsoft.Network/publicIPAddresses/pip1",
                "subnet_id": "/subscriptions/bac3dafd-694e-4cd6-9d74-16e912e3fc72/resourceGroups/example-resources/providers/Microsoft.Network/virtualNetworks/example-network/subnets/internal"
              }
            ],
            "location": "westeurope",
            "mac_address": "00-0D-3A-A9-9B-47",
            "name": "nic2",
            "private_ip_address": "10.0.2.5",
            "private_ip_addresses": [
              "10.0.2.5"
            ],
            "resource_group_name": "example-resources",
            "virtual_machine_id": "/subscriptions/bac3dafd-694e-4cd6-9d74-16e912e3fc72/resourceGroups/example-resources/providers/Microsoft.Compute/virtualMachines/example-vm2"
          },
          "dependencies": [
            "azurerm_public_ip.myvm1publicip",
            "azurerm_resource_group.example",
            "azurerm_subnet.example",
            "azurerm_virtual_network.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/bac3dafd-694e-4cd6-9d74-16e912e3fc72/resourceGroups/example-resources/providers/Microsoft.Network/networkInterfaces/example-nic|/subscriptions/bac3dafd-694e-4cd6-9d74-16e912e3fc72/resourceGroups/example-resources/providers/Microsoft.Network/networkSecurityGroups/example-nsg",
            "network_interface_id": "/subscriptions/bac3dafd-694e-4cd6-9d74-16e912e3fc72/resourceGroups/example-resources/providers/Microsoft.Network/networkInterfaces/example-nic",
            "network_security_group_id": "/subscriptions/bac3dafd-694e-4cd6-9d74-16e912e3fc72/resourceGroups/example-resources/providers/Microsoft.Network/networkSecurityGroups/example-nsg"
          },
          "dependencies": [
            "azurerm_network_interface.example",
            "azurerm_network_security_group.example",
            "azurerm_resource_group.example",
            "azurerm_subnet.example",
            "azurerm_virtual_network.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/bac3dafd-694e-4cd6-9d74-16e912e3fc72/resourceGroups/example-resources/providers/Microsoft.Network/networkSecurityGroups/example-nsg",
            "location": "westeurope",
            "name": "example-nsg",
            "resource_group_name": "example-resources",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "test123",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "*",
            "destination_port_ranges": [],
            "direction": "Outbound",
            "id": "/subscriptions/bac3dafd-694e-4cd6-9d74-16e912e3fc72/resourceGroups/example-resources/providers/Microsoft.Network/networkSecurityGroups/example-nsg/securityRules/test123",
            "name": "test123",
            "network_security_group_name": "example-nsg",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "example-resources",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.example",
            "azurerm_resource_group.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "myvm1publicip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "id": "/subscriptions/bac3dafd-694e-4cd6-9d74-16e912e3fc72/resourceGroups/example-resources/providers/Microsoft.Network/publicIPAddresses/pip1",
            "idle_timeout_in_minutes": 4,
            "ip_address": "51.136.37.112",
            "ip_version": "IPv4",
            "location": "westeurope",
            "name": "pip1",
            "resource_group_name": "example-resources",
            "sku": "Basic"
          },
          "dependencies": [
            "azurerm_resource_group.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.2.0/24",
            "address_prefixes": [
              "10.0.2.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/bac3dafd-694e-4cd6-9d74-16e912e3fc72/resourceGroups/example-resources/providers/Microsoft.Network/virtualNetworks/example-network/subnets/internal",
            "name": "internal",
            "resource_group_name": "example-resources",
            "virtual_network_name": "example-network"
          },
          "dependencies": [
            "azurerm_resource_group.example",
            "azurerm_virtual_network.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/bac3dafd-694e-4cd6-9d74-16e912e3fc72/resourceGroups/example-resources/providers/Microsoft.Network/virtualNetworks/example-network/subnets/internal",
            "network_security_group_id": "/subscriptions/bac3dafd-694e-4cd6-9d74-16e912e3fc72/resourceGroups/example-resources/providers/Microsoft.Network/networkSecurityGroups/example-nsg",
            "subnet_id": "/subscriptions/bac3dafd-694e-4cd6-9d74-16e912e3fc72/resourceGroups/example-resources/providers/Microsoft.Network/virtualNetworks/example-network/subnets/internal"
          },
          "dependencies": [
            "azurerm_network_security_group.example",
            "azurerm_resource_group.example",
            "azurerm_subnet.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "guid": "3016c472-7284-4f7b-9cf5-a82c94b3d8dd",
            "id": "/subscriptions/bac3dafd-694e-4cd6-9d74-16e912e3fc72/resourceGroups/example-resources/providers/Microsoft.Network/virtualNetworks/example-network",
            "location": "westeurope",
            "name": "example-network",
            "resource_group_name": "example-resources",
            "subnet": [
              {
                "address_prefix": "10.0.2.0/24",
                "id": "/subscriptions/bac3dafd-694e-4cd6-9d74-16e912e3fc72/resourceGroups/example-resources/providers/Microsoft.Network/virtualNetworks/example-network/subnets/internal",
                "name": "internal"
              }
            ],
            "vm_protection_enabled": false
          },
          "dependencies": [
            "azurerm_resource_group.example"
          ]
        }
      ]
    }
  ]
}